slowly but surely.
Implemented object previews

--- a/src/main.css
+++ b/src/main.css
@@ -28,6 +28,13 @@ body > div {
     cursor: n-resize;
 }
 
+.obj-preview {
+    width: 100%;
+}
+
+#left-view-bottom {
+    overflow-y: auto;
+}
 
 /* make materialize and blockly get along */
 .blocklyHtmlInput {
